# rust-spotifyexp

./: Cargo.toml
src/: api.rs  config.rs  lib.rs  objects.rs
src/api/: player.rs  playlists.rs  search.rs  tracks.rs
