[package]
name = "spotifyexp"
version = "0.1.0"
authors = ["SAWADA Tadashi <cesare@mayverse.jp>"]
edition = "2018"

[dependencies]
anyhow = "~1.0.40"
envy = "~0.4.2"
reqwest = { version = "~0.11.3", features = ["json"] }
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "~1.0.64"
structopt = "~0.3.21"
tokio = { version = "1.6.1", features = ["macros", "rt-multi-thread"] }
